--- a/financialapp/src/main/resources/application.properties
+++ b/financialapp/src/main/resources/application.properties
@@ -5,8 +5,6 @@ spring.datasource.password=soccer
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Read output of security url statuses
-#logging.level.org.springframework.security=DEBUG
 
 
 #chat gave me this when it helped me setup the database all these lines below do is set the "dialect of the server jpa"
@@ -14,3 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
+server.forward-headers-strategy=framework
+
+#logging.level.org.springframework.security=DEBUG
